http2-tomcat-okhttp3/istio-tomcat-service.yml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-http2
  labels:
    app: tomcat-http2
spec:
  selector:
    app: tomcat-http2
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
  - name: https
    protocol: TCP
    port: 443
    targetPort: 8080
