http2-tomcat-okhttp3/istio-tomcat-virtual-service.yml
  
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tomcat-http2-vs
spec:
  hosts:
  - "tomcat-http2.hung.org.hk"
  gateways:
  - tomcat-http2  
  http:
  - route:
    - destination:
        host: tomcat-http2
        subset: v1
      weight: 100
